touch up a style that prevented readable text on fauxbuttons

--- a/assets/sass/_modal.scss
+++ b/assets/sass/_modal.scss
@@ -297,6 +297,9 @@
 					}
 				} // button blue
 			} // button
+			.privacy-center-container a.button {
+				color: #555
+			}
 		} // modal-body
 	} // modal content
 } // modal
